--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -59,7 +59,9 @@ test:
     - "\"%R%\" -e \"testthat::test_file('tests/testthat.R', stop_on_failure=TRUE)\""  # [win]
 
 about:
-  home: https://docs.ropensci.org/tinkr/, https://github.com/ropensci/tinkr
+  home: https://docs.ropensci.org/tinkr/
+  dev_url: https://github.com/ropensci/tinkr
+  doc_url: https://docs.ropensci.org/tinkr/
   license: GPL-3.0-or-later
   summary: Parsing '(R)Markdown' files with numerous regular expressions can be fraught with peril, but it does not have to be this way. Converting '(R)Markdown' files to 'XML' using the 'commonmark' package allows in-memory editing via of 'markdown' elements via 'XPath' through the extensible 'R6' class called 'yarn'. These
     modified 'XML' representations can be written to '(R)Markdown' documents via an 'xslt' stylesheet which implements an extended version of 'GitHub'-flavoured 'markdown' so that you can tinker to your hearts content.
